Fix fab text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ button {
     bottom: 32px;
     left: 50%;
     transform: translateX(-50%);
+    white-space: nowrap;
     z-index: 1;
 }
 
